# estudo-api-management

./: .gitignore  404.html  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
anexos/a_1_breaking_changes_REST/: index.html
anexos/a_2_breaking_changes_graphQL/: index.html
anexos/a_3_breaking_changes_grpc/: index.html
anexos/a_4_breaking_changes_asyncapi/: index.html
anexos/b_plano_depreciacao/: index.html
anexos/c_raci/: index.html
anexos/d_gestao_conhecimento_api/: index.html
anexos/e_design_seguro/: index.html
anexos/f_siem/: index.html
anexos/g_autorizacao_controle/: index.html
anexos/h_exposicao_dados/: index.html
anexos/i_recursos_injecao_gestao/: index.html
anexos/j_rfcs_oauth/: index.html
anexos/k_rfcs_token/: index.html
anexos/l_rbac/: index.html
anexos/m_frameworks_maturidade/: index.html
anexos/n_diagnostico_formulario/: index.html
docs/: index.md
docs/anexos/: a_1_breaking_changes_REST.md  a_2_breaking_changes_graphQL.md  a_3_breaking_changes_grpc.md  a_4_breaking_changes_asyncapi.md  b_plano_depreciacao.md  c_raci.md  d_gestao_conhecimento_api.md  e_design_seguro.md  f_siem.md  g_autorizacao_controle.md  h_exposicao_dados.md  i_recursos_injecao_gestao.md  l_rbac.md  (+4 more)
modulo-1-fundamentos/: index.html
modulo-2-ciclo-de-vida/: index.html
modulo-3-governanca/: index.html
modulo-4-itil/: index.html
modulo-5-seguranca/: index.html
modulo-6-ia_apis/: index.html
modulo-7-maturidade/: index.html
modulo-8-operacionalizando_governança/: index.html
search/: search_index.json
stylesheets/: extra.css
(+166 files in other folders)
