[tool.poetry]
name = "estudo-api-management"
version = "0.1.0"
description = "Documentação de estudos sobre API Management"
authors = ["Fabio <fgmira@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
mkdocs-material = "^9.7.6"
mkdocs-panzoom-plugin = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
